--- a/client/src/app/errors/test-error/test-error.component.html
+++ b/client/src/app/errors/test-error/test-error.component.html
@@ -5,5 +5,14 @@
     <button class="btn btn-primary" (click)="get404Error()">Test 404 Error</button>  
     <button class="btn btn-primary" (click)="get400ValidationError()">Test 400 Validation Error</button>  
    
+    <div class="row mt-5" *ngIf="validationErrors.length > 0">
+    
+    <ul class="text-danger">
+        <li *ngFor="let error of validationErrors">
+            {{error}}
+
+        </li>
+    </ul>
+    </div>
    </ng-container>
    
