Building the user interface

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -44,7 +44,7 @@
 </tab>
 
 <tab heading="Photos" #photoTab="tab">
-    <gallery *ngIf="photoTab.active" [items]="images"></gallery>
+    <gallery class="gallery" *ngIf="photoTab.active" [items]="images"></gallery>
 </tab>
 
 <tab heading="Messages">
